--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".TestChart"/>
         <activity android:name=".First"/>
         <activity android:name=".ReadCodeActivity"/>
+        <activity android:name=".MpLineChats"/>
     </application>
 
 </manifest>
